--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ulong.learn</groupId>
-  <artifactId>dom4j</artifactId>
+  <artifactId>XML-Parser</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>dom4j</name>
+  <name>XML-Parser</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -30,5 +30,6 @@
 
   <modules>
   	<module>learnDom4j</module>
+    <module>learnStax</module>
   </modules>
 </project>
